--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -77,7 +77,8 @@
     <string name="resume_button">Resume</string>
     <string name="suspend_button">Suspend</string>
     <string name="reboot">Reboot</string>
-    <string name="details_button">View details</string>
+    <string name="details_button">Changelog</string>
+    <string name="changelog_fail">Failed to retrieve changelog</string>
 
     <!-- Installation -->
     <string name="apply_update_dialog_title">Apply update</string>
@@ -131,4 +132,5 @@
     <string name="forum_info_title">Forum</string>
     <string name="forum_info_summary">View forum posts</string>
     <string name="error_open_url">Failed to open URL in browser</string>
+    <string name="changelog_url" translatable="false">https://raw.githubusercontent.com/Nusantara-ROM/official_devices/<xliff:g id="device_name">%1$s</xliff:g>.md</string>
 </resources>
