--- a/res/layout/update_item_view.xml
+++ b/res/layout/update_item_view.xml
@@ -140,8 +140,8 @@
                 tools:text="Pause" />
 
             <Button
-                android:id="@+id/changelog_action"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:id="@+id/details_action"
+                style="@style/Widget.RaisedButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:fontFamily="@*android:string/config_headlineFontFamilyMedium"
